--- a/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
@@ -58,7 +58,7 @@
                         <select class="fm-control"  ng-model="roadNameData.infix"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in infixOpt"
-                                ng-change="getPy($event, this, 'infix', 'infixPhonetic')" ng-class="{false:'disedit'}[infixEditable]">
+                                ng-change="getPy($event, this, 'infix', 'infixPhonetic')" ng-disabled=infixEditable>
                         </select>
                     </div>
                 </li>
@@ -111,7 +111,7 @@
                         <select class="fm-control" ng-model="roadNameData.prefix"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in prefixOpt"
-                                ng-change="getPy($event, this, 'prefix', 'prefixPhonetic')" ng-class="{false:'disedit'}[prefixEditable]">
+                                ng-change="getPy($event, this, 'prefix', 'prefixPhonetic')" ng-disabled=prefixEditable>
                         </select>
                     </div>
                 </li>
@@ -125,13 +125,13 @@
                         <select class="fm-control" ng-model="roadNameData.roadType"
                                 placeholder_text_single="'--请选择--'" 
                                 ng-options="value.id as value.label for value in roadTypeOpt"
-                                ng-change="roadTypeChange($event, this)" ng-class="{true:'chosen-disabled'}['ENG' == roadNameData.langCode]">
+                                ng-change="roadTypeChange($event, this)" ng-disabled=roadTypeEditable>
                         </select>
                     </div>
                 </li>
                 <li>
-                    <label >路线号码??</label>
-                    <div><input type="text" class="fm-control" /></div>
+                    <label >路线号码</label>
+                    <div><input type="text" class="fm-control" ng-model="roadNameData.routeId"/></div>
                 </li>
             </ul>
             <ul class="fm-ul fm-ul-form col-md-4">
@@ -147,7 +147,7 @@
                         <select class="fm-control" ng-model="roadNameData.srcFlag"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in srcFlagOpt"
-                                ng-change="srcFlagChange($event, this)" ng-class="{false:'disedit'}[srcFlagEditable]">
+                                ng-change="srcFlagChange($event, this)" ng-disabled=srcFlagEditable>
                         </select>
                     </div>
                 </li>
@@ -165,7 +165,7 @@
                         <select class="fm-control"  ng-model="roadNameData.suffix"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in suffixOpt"
-                                ng-change="getPy($event, this, 'suffix', 'suffixPhonetic')" ng-class="{false:'disedit'}[suffixEditable]">
+                                ng-change="getPy($event, this, 'suffix', 'suffixPhonetic')" ng-disabled=suffixEditable>
                         </select>
                     </div>
                 </li>
@@ -175,7 +175,7 @@
                         <select class="fm-control"  ng-model="roadNameData.codeType"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in codeTypeOpt"
-                                ng-change="codeTypeChange($event, this)" ng-class="{false:'disedit'}[codeTypeEditalbe]">
+                                ng-change="codeTypeChange($event, this)" ng-disabled=codeTypeEditalbe>
                         </select>
                     </div>
                 </li>
@@ -186,10 +186,10 @@
                 <li>
                     <label >HIGHWAY信息标识??:</label>
                     <div>
-                        <select ng-model="hwInfoFlag"
+                        <select class="fm-control" ng-model="hwInfoFlag"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in hwInfoFlagOpt"
-                                ng-change="hwInfoFlagChange($event, this)" ng-class="{false:'fm-control disedit',true:'fm-control'}[hwInfoFlagEditable]">
+                                ng-change="hwInfoFlagChange($event, this)" ng-disabled=hwInfoFlagEditable>
                         </select>
                     </div>
                 </li>
