--- a/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
@@ -1,26 +1,3 @@
-<style>
- 	/* input[type="text"][disabled]{
-        cursor: not-allowed;
-  		opacity: 0.5;
-    }
-   .inputDisabled:{
-    	cursor: not-allowed;
-  		opacity: 0.5;
-    } 
-    textarea[disabled]{
-        cursor: not-allowed;
-  		opacity: 0.5;
-  		resize:none;
-    }
-    select[disabled]{
-        cursor: not-allowed;
-  		opacity: 0.5;
-    }
-    .disedit {
-    	cursor: not-allowed;
-  		opacity: 0.5;
-    } */
- </style>
 <div class="fm-panel" ng-controller="RoadNameEditPanelCtl" style="margin:0px;">
     <div class="title">编辑道路名信息</div>
     <div class="content" >
@@ -28,14 +5,9 @@
             <ul class="fm-ul fm-ul-form col-md-4">
                 <li>
                     <label>道路名组ID:</label>
-                    <!-- <nobr>
-                    	<input type="text" class="fm-control disedit" ng-model="roadNameData.nameGroupid" style="width:100%"/>
-                    	<span ng-show="nameGroupidEditable != false" title="搜索" class="glyphicon glyphicon-search" aria-hidden="true" ng-click="openSearchModal('nameGroup')"></span>
-                    	<a ng-show="nameGroupidEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;height:15px;" ng-click="openSearchModal('nameGroup')"></a>
-                    </nobr> -->
                     <div>
                     	<input type="text" class="fm-control chosen-disabled"  ng-model="roadNameData.nameGroupid" style="width:98%" ng-disabled=true>
-                    	<a ng-show="nameGroupidEditable != false" title="搜索" class="glyphicon glyphicon-search" aria-hidden="true" ng-click="openSearchModal('nameGroup')" style="margin-left: -17px;"></a>
+                    	<a ng-show="nameGroupidEditable" title="搜索" class="glyphicon glyphicon-search" aria-hidden="true" ng-click="openSearchModal('nameGroup')" style="margin-left: -17px;"></a>
                     </div>
                 </li>
                 <li>
@@ -46,20 +18,15 @@
                 </li>
                 <li>
                     <label>类型名称:</label>
-                    <!-- <nobr>
-                    	<input type="text" class="fm-control" ng-model="roadNameData.type" disabled/>
-                    	<a ng-show="typeEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;height:15px;" ng-click="openSearchModal('type')"></a>
-                    </nobr> -->
                     <div>
                     	<input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.type" style="width:98%" ng-disabled=true>
-                    	<!-- <a ng-show="typeEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;height:15px;" ng-click="openSearchModal('type')"></a> -->
-                    	<a ng-show="typeEditable != false" title="搜索" class="glyphicon glyphicon-search" aria-hidden="true" ng-click="openSearchModal('type')" style="margin-left: -17px;"></a>
+                    	<a ng-show="typeEditable" title="搜索" class="glyphicon glyphicon-search" aria-hidden="true" ng-click="openSearchModal('type')" style="margin-left: -17px;"></a>
                     </div>
                 </li>
                 <li>
                     <label>基本名发音:</label>
                     <div>
-                        <input type="text" class="fm-control" ng-model="roadNameData.basePhonetic" ng-class="{false:'disedit'}[basePhoneticEditable]">
+                        <input type="text" class="fm-control" ng-model="roadNameData.basePhonetic" ng-class="{true:'chosen-disabled'}[basePhoneticDisable]" ng-disabled="typePhoneticDisable">
                     </div>
                 </li>
                 <li>
@@ -68,7 +35,7 @@
                         <select class="fm-control"  ng-model="roadNameData.infix"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in infixOpt"
-                                ng-change="getPy($event, this, 'infix', 'infixPhonetic')" ng-disabled=infixDisable>
+                                ng-change="getPy($event, this, 'infix', 'infixPhonetic')" ng-class="{true:'chosen-disabled'}[infixDisable]" ng-disabled=infixDisable>
                         </select>
                     </div>
                 </li>
@@ -80,7 +47,7 @@
                     <label >行政区划:</label>
                     <div>
                     	<input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.adminName" style="width:98%" ng-disabled=true>
-                    	<a ng-show="adminIdEditable != false" href="#" title="搜索" class="glyphicon glyphicon-search" style="margin-left: -17px;" ng-click="openSearchModal('admin')"></a>
+                    	<a ng-show="adminIdEditable" href="#" title="搜索" class="glyphicon glyphicon-search" style="margin-left: -17px;" ng-click="openSearchModal('admin')"></a>
                     </div>
                 </li>
                 <li>
@@ -101,19 +68,19 @@
                         <select class="fm-control"  ng-model="roadNameData.langCode"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in langCodeOpt"
-                                ng-change="langCodeChange($event, this)" ng-disabled=langCodeDisable>
+                                ng-change="langCodeChange($event, this)" ng-class="{true:'chosen-disabled'}[langCodeDisable]" ng-disabled=langCodeDisable>
                         </select>
                     </div>
                 </li>
                 <li>
                     <label>名称语音:</label>
                     <div>
-                        <input type="text" class="fm-control" ng-model="roadNameData.voiceFile" ng-class="{false:'disedit'}[voiceFileEditable]">
+                        <input type="text" class="fm-control" ng-model="roadNameData.voiceFile" ng-class="{true:'chosen-disabled'}[voiceFileDisable]" ng-disabled="voiceFileDisable">
                     </div>
                 </li>
                 <li>
                     <label>类型名发音:</label>
-                    <div><input type="text" class="fm-control" ng-model="roadNameData.typePhonetic" ng-class="{false:'disedit'}[typePhoneticEditable]"></div>
+                    <div><input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.typePhonetic" ng-disabled=true></div>
                 </li>
                 <li>
                     <label>前缀名称:</label>
@@ -121,7 +88,7 @@
                         <select class="fm-control" ng-model="roadNameData.prefix"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in prefixOpt"
-                                ng-change="getPy($event, this, 'prefix', 'prefixPhonetic')" ng-disabled=prefixDisable>
+                                ng-change="getPy($event, this, 'prefix', 'prefixPhonetic')" ng-class="{true:'chosen-disabled'}[prefixDisable]" ng-disabled=prefixDisable>
                         </select>
                     </div>
                 </li>
@@ -135,7 +102,7 @@
                         <select class="fm-control" ng-model="roadNameData.roadType"
                                 placeholder_text_single="'--请选择--'" 
                                 ng-options="value.id as value.label for value in roadTypeOpt"
-                                ng-change="roadTypeChange($event, this)" ng-disabled=roadTypeDisable>
+                                ng-change="roadTypeChange($event, this)" ng-class="{true:'chosen-disabled'}[roadTypeDisable]" ng-disabled=roadTypeDisable>
                         </select>
                     </div>
                 </li>
@@ -148,7 +115,7 @@
                 <li>
                     <label>道路名称</label>
                     <div >
-                        <input type="text" class="fm-control" ng-model="roadNameData.name" ng-class="{true:'disedit'}[nameEditable]">
+                        <input type="text" class="fm-control" ng-model="roadNameData.name" ng-class="{true:'chosen-disabled'}[nameDisable]" ng-disabled=nameDisable>
                     </div>
                 </li>
                 <li>
@@ -157,13 +124,13 @@
                         <select class="fm-control" ng-model="roadNameData.srcFlag"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in srcFlagOpt"
-                                ng-change="srcFlagChange($event, this)" ng-disabled=srcFlagDisable>
+                                ng-change="srcFlagChange($event, this)" ng-class="{true:'chosen-disabled'}[srcFlagDisable]" ng-disabled=srcFlagDisable>
                         </select>
                     </div>
                 </li>
                 <li>
                     <label>基本名称:</label>
-                    <div><input type="text" class="fm-control" ng-model="roadNameData.base" ng-blur="getPy($event, this, 'base', 'basePhonetic')" ng-class="{false:'disedit'}[baseEditable]"></div>
+                    <div><input type="text" class="fm-control" ng-model="roadNameData.base" ng-blur="getPy($event, this, 'base', 'basePhonetic')" ng-class="{true:'chosen-disabled'}[baseDisable]" ng-disabled=baseDisable></div>
                 </li>
                 <li>
                     <label>前缀发音:</label>
@@ -175,7 +142,7 @@
                         <select class="fm-control"  ng-model="roadNameData.suffix"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in suffixOpt"
-                                ng-change="getPy($event, this, 'suffix', 'suffixPhonetic')" ng-disabled=suffixDisable>
+                                ng-change="getPy($event, this, 'suffix', 'suffixPhonetic')" ng-class="{true:'chosen-disabled'}[suffixDisable]" ng-disabled=suffixDisable>
                         </select>
                     </div>
                 </li>
@@ -185,7 +152,7 @@
                         <select class="fm-control"  ng-model="roadNameData.codeType"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in codeTypeOpt"
-                                ng-change="codeTypeChange($event, this)" ng-disabled=codeTypeDisable>
+                                ng-change="codeTypeChange($event, this)" ng-class="{true:'chosen-disabled'}[codeTypeDisable]" ng-disabled=codeTypeDisable>
                         </select>
                     </div>
                 </li>
@@ -194,12 +161,12 @@
                     <div><input type="text" class="fm-control" ng-model="roadNameData.srcResume"></div>
                 </li>
                 <li>
-                    <label >HIGHWAY信息标识:</label>
+                    <label >HW信息标识:</label>
                     <div>
                         <select class="fm-control" ng-model="hwInfoFlag"
                                 placeholder_text_single="'--请选择--'"
                                 ng-options="value.id as value.label for value in hwInfoFlagOpt"
-                                ng-change="hwInfoFlagChange($event, this)" ng-disabled=hwInfoFlagDisable>
+                                ng-change="hwInfoFlagChange($event, this)" ng-class="{true:'chosen-disabled'}[hwInfoFlagDisable]" ng-disabled=hwInfoFlagDisable>
                         </select>
                     </div>
                 </li>
