--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -39,7 +39,7 @@
                                 <select fm-edit-view class="fm-control"  ng-model="selectedChain"
                                         no_results_text="'--无--'"  placeholder_text_single="'--请选择--'"
                                         ng-options="value as lable.chainName for (value, lable) in chainList"
-                                        chosen ng-change="brandChange($event, this)">
+                                        chosen ng-change="brandChange($event, this)" ng-disabled="isSpecialOperation">
                                 </select>
                             </div>
                         </li>
