--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -83,6 +83,7 @@
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDVOICEGUIDE':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDVOICEGUIDE')">语音引导</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'VARIABLESPEED':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('VARIABLESPEED')">可变限速</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDLANE':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDLANE')">详细车道</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDLANETOPO':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDLANETOPO')">车道连通</button>
             </li>
         </ul>
     </div>
