--- a/scripts/components/column/tpls/englishName/nonImportantLongEngNameTpl.html
+++ b/scripts/components/column/tpls/englishName/nonImportantLongEngNameTpl.html
@@ -9,10 +9,29 @@
 		</div>
 		<div class="content">
 			<div style="clear: both;">
+			<!--自定义条数的template-->
+	            <script type="text/ng-template" id="myPopoverTemplate.html">
+                    <div class="form-group" ng-repeat="item in costomWorkNumEum">
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="selectNum" id="optionsRadios1" ng-checked="editorLines==item.num" ng-click="selectNum(item,$index)"> <span ng-bind="item.desc"></span>
+                            </label>
+                        </div>
+                        <!--自定义输入框部分-->
+                        <div ng-if="inputIsShow&&$last" class="input-group">
+                            <input class="form-control" ng-model="item.num" type="text" />
+                            <span class="input-group-btn">
+                                <button ng-click="setInputValue(item.num)" class="btn btn-default" type="button">确认</button>
+                            </span>
+                        </div>
+                    </div>
+            	</script>
 				<div class="pull-left" style="padding: 10px;">
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">在线检查</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-click="batchWork()">批量作业</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-click="submitData();">提交数据</button>
+					<!--自定义编辑条数控制-->
+                	<span role="button" popover-is-open="popoverIsOpen" popover-placement="bottom" uib-popover-template="customPopoverUrl" popover-title="每次作业条数:" class="fa fa-cog fa-lg pointer wordColorWhite"></span>
 				</div>
 				<div class="pull-right" style="padding: 10px;">
 					<input class="fm-search-control" type="text" ng-model="filters[searchType]" placeholder="搜索"/>
@@ -48,50 +67,51 @@
 			</div>
 			<!-- 批量作业 -->
 			<div ng-show="batchWorkIsOpen">
-					<div class="div-float" style="top:80px;left:120px;border-radius:5px;">
-				        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeBatchModal()"><span>&times;</span></button>
-				        <div class="fm-panel" style="margin:0px;width:330px;">
-				        <!-- <div style="border-bottom: 1px solid #ddd;"></div> -->
-						    <div class="fm-tabs" style="padding:0px;margin: 0px;">
-								<a href="#" class="tab" ng-class="{1:'active'}[batchFlag]" ng-click="batchTabs(1)">替换</a>
-								<a href="#" class="tab" ng-class="{2:'active'}[batchFlag]" ng-click="batchTabs(2)">高级搜索</a>
-							</div>
-						    <div class="content" >
-						        <div style="height:200px;">
-									<ul class="fm-ul fm-ul-form">
-						                <li>
-						                    <label>字段:</label>
-						                    <div>
-						                    	<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
-						                                placeholder_text_single="'--请选择--'"
-						                                ng-options="value.id as value.label for value in batchOpt"
-						                                ng-change="changeField($event, this)">
-						                        </select>
-						                    </div>
-						                </li>
-						                <li>
-						                    <label>搜索:</label>
-						                    <div>
-						                    	<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.value">
-						                    </div>
-						                </li>
-						                <li ng-show="extractEle">
-						                    <label>替换为:</label>
-						                    <div>
-						                    	<input type="text" class="fm-control" style="width:200px;" ng-model="admin">
-						                    </div>
-						                </li>
-						            </ul>
-						        </div>
-						    </div>
-						    <div style="border-bottom: 1px solid #ddd;"></div>
-						    <div style="text-align:right;">
-							    <button type="button" class="btn btn-main" ng-click="cancle()" style="margin:6px 8px">取消</button>
-							    <button type="button" class="btn btn-main" ng-show="extractEle" ng-click="extractData()" style="margin:6px 8px">提取数据</button>
-						        <button type="button" class="btn btn-main" ng-show="searchBtn" ng-click="searchWork()" style="margin:6px 8px">搜索作业</button>
-						    </div>
+				<div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
+			        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeBatchModal()"><span>&times;</span></button>
+			        <button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
+			        <div class="fm-panel" style="margin:0px;width:330px;">
+			        <!-- <div style="border-bottom: 1px solid #ddd;"></div> -->
+					    <div class="fm-tab" style="padding:0px;margin: 0px;">
+							<a href="#" class="tab" ng-class="{1:'active'}[batchFlag]" ng-click="batchTabs(1)">替换</a>
+							<a href="#" class="tab" ng-class="{2:'active'}[batchFlag]" ng-click="batchTabs(2)">高级搜索</a>
 						</div>
-				    </div>
+					    <div class="content" >
+					        <div style="height:200px;">
+								<ul class="fm-ul fm-ul-form">
+					                <li>
+					                    <label>字段:</label>
+					                    <div>
+					                    	<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
+					                                placeholder_text_single="'--请选择--'"
+					                                ng-options="value.id as value.label for value in batchOpt"
+					                                ng-change="changeField($event, this)">
+					                        </select>
+					                    </div>
+					                </li>
+					                <li>
+					                    <label>搜索:</label>
+					                    <div>
+					                    	<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.value">
+					                    </div>
+					                </li>
+					                <li ng-show="extractEle">
+					                    <label>替换为:</label>
+					                    <div>
+					                    	<input type="text" class="fm-control" style="width:200px;" ng-model="admin">
+					                    </div>
+					                </li>
+					            </ul>
+					        </div>
+					    </div>
+					    <div style="border-bottom: 1px solid #ddd;"></div>
+					    <div style="text-align:right;">
+						    <button type="button" class="btn btn-main" ng-click="cancle()" style="margin:6px 8px">取消</button>
+						    <button type="button" class="btn btn-main" ng-show="extractEle" ng-click="extractData()" style="margin:6px 8px">提取数据</button>
+					        <button type="button" class="btn btn-main" ng-show="searchBtn" ng-click="searchWork()" style="margin:6px 8px">搜索作业</button>
+					    </div>
+					</div>
+			    </div>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -101,6 +121,9 @@
 			<div class="title">
 				<span style="cursor: pointer">非重要分类英文超长</span>
 				<button type="button" class="close" ng-click="closeEditPanel()" style="color: white;opacity: 1;margin: -4px 0px;"><span>&times;</span></button>
+				<span class="pull-right" style="padding-right: 10px;">
+					<i class="fa fa fa-file-text-o fa-lg pointer wordColorWhite" title="批量作业" ng-click="editBatchWork()"></i>
+				</span>
 			</div>
 			<div>
 				<div class="fm-fitsize dark scroll-styled tablePosition" style="top:30px;color: white;">
@@ -193,6 +216,50 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<!-- 编辑界面批量作业 -->
+	    <div ng-show="editBatchWorkIsOpen">
+			<div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
+		        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditBatchModal()"><span>&times;</span></button>
+		        <button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
+		        <div class="fm-panel" style="margin:0px;width:330px;">
+				    <div class="title">批量作业</div>
+				    <div class="content" >
+				        <div style="height:200px;">
+							<ul class="fm-ul fm-ul-form">
+				                <li>
+				                    <label>字段:</label>
+				                    <div>
+				                    	<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
+				                                placeholder_text_single="'--请选择--'"
+				                                ng-options="value.id as value.label for value in replaceOpt"
+				                                ng-change="changeField($event, this)" ng-class="{true:'chosen-disabled'}[editDisable]" ng-disabled="editDisable">
+				                        </select>
+				                    </div>
+				                </li>
+				                <li>
+				                    <label>搜索:</label>
+				                    <div>
+				                    	<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.value" ng-class="{true:'chosen-disabled'}[editDisable]" ng-disabled="editDisable">
+				                    </div>
+				                </li>
+				                <li>
+				                    <label>替换为:</label>
+				                    <div>
+				                    	<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.replaceTo" ng-class="{true:'chosen-disabled'}[editDisable]" ng-disabled="editDisable">
+				                    </div>
+				                </li>
+				            </ul>
+				        </div>
+				    </div>
+				    <div style="border-bottom: 1px solid #ddd;"></div>
+				    <div style="text-align:right;">
+					    <button type="button" class="btn btn-main" ng-click="next()" style="margin:6px 8px">下一个</button>
+					    <button type="button" class="btn btn-main" ng-click="replaceOne()" style="margin:6px 8px">替换</button>
+				        <button type="button" class="btn btn-main" ng-click="replaceAll()" style="margin:6px 8px">全部替换</button>
+				    </div>
+				</div>
+		    </div>
 		</div>
 	</div>
 </div>
